--- a/E2E Testing Demo/Views/Home/Index.cshtml
+++ b/E2E Testing Demo/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4 testcss" style="font-size: x-large">
+    <div class="col-md-4 testcss">
         <h2>Get more libraries</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
